--- a/css/resume.css
+++ b/css/resume.css
@@ -10,24 +10,32 @@ html {
 	margin: 0;
 }
 
+.resume * {
+	letter-spacing: 0.5px;
+}
+
 .resume p {
-	font-size: 1.0em;
+	font-size: 1.02em;
 	color: black;
-	line-height: 1.3;
-	letter-spacing: 0.3px;
+	line-height: 1.15;
+	letter-spacing: 0.35px;
+}
+
+.resume .contra-color-text * {
+	color: white;
 }
 
 .fine-print {
-	font-size: 0.75em;
+	font-size: 0.66em;
 }
 
 .resume-pill, .resume-pill-sk {
 	border: 2px solid black;
-	padding: 0.5rem;
 	border-radius: 50px;
-	margin: 0.25rem !important;
+	margin: 0.125rem !important;
 	background: white;
 	transition-duration: 1s;
+	padding: 0.33rem .66rem;
 }
 
 .resume-pill:hover, .resume-pill-sk:hover,
@@ -51,7 +59,6 @@ div.content div {
 
 .resume-pill-sk {
 	border: 1px solid black;
-	padding: 0.33rem .66rem !important;
 }
 
 div.resume-pill > p, div.resume-pill-sk > p{
@@ -67,20 +74,20 @@ div.resume-pill-sk > p {
 }
 
 .resume-left-right-margin {
-	padding: 0 3em 0 3em;
+	padding: 0 1.75em 0 2em;
 }
 
 .resume-left-right-margin:last-of-type:not(.resume-mid-menu) {
-	padding: 0 3em 1em 3em;
+	padding: 0 1.75em 0.5em 2em;
 }
 
 .resume-top-bottom {
-	padding-top: 0.5em;
-	padding-bottom: 0.5em;
+	padding-top: 0.25em;
+	padding-bottom: 0.25em;
 }
 
 .resume-top {
-	padding-top: 0.5em;
+	padding-top: 0.25em;
 }
 
 .resume-time, .resume-place, .resume-achievement {
@@ -97,43 +104,31 @@ div.resume-pill-sk > p {
 }
 
 .resume-header > h1 {
-	color: white;
 	font-size: 3em;
 	font-weight: 900;
 	margin-block-end: 0.4em;
-	margin-block-start: 0.8em;
+	margin-block-start: 0.4em;
 	opacity: 1;
 }
 
 .resume-mid-header {
 	text-align: left;
-	padding-bottom: 0.08em;
+	padding-bottom: 0.12em;
 }
 
 .resume-mid-header > .resume-mid-header-text {
-	color: white;
 	font-size: 2em;
 	font-weight: 700;
-	margin-block-end: 0.08em;
-	margin-block-start: 0.16em;
+	margin-block-end: 0.12em;
+	margin-block-start: 0.04em;
 	opacity: 1;
 }
 
-.resume-mid-header > .resume-mid-header-basic-text {
-	color: white;
+.resume-mid-header > .resume-mid-header-basic-text, .resume-mid-header > .resume-mid-header-basic-text > a {
 	font-size: 1.0em;
 	font-weight: 500;
 	margin-block-end: 0em;
 	margin-block-start: 0em;
-	opacity: 1;
-}
-
-.resume-mid-header > .resume-mid-header-basic-text > a{
-	color: white;
-	font-size: 1.0em;
-	font-weight: 500;
-	text-decoration: none;
-	transition-duration: 1s;
 	opacity: 1;
 }
 
@@ -143,12 +138,12 @@ div.resume-pill-sk > p {
 	font-size: 1.0em;
 	font-weight: 900;
 	text-decoration: none;
+	color: black;
 	background-color: white;
 }
 
 .resume-mid-sub-header > .resume-mid-sub-header-text {
-	color: white;
-	font-size: 1.5em;
+	font-size: 1em;
 	font-weight: 500;
 	margin-block-end: 0em;
 	margin-block-start: 0em;
@@ -164,27 +159,26 @@ div.resume-pill-sk > p {
 
 .resume-block {
 	text-align: left;
-	background-color: white;
 }
 
 .resume-block-title{
 	font-size: 2em;
 	font-weight: 700;
-	margin-block-end: 0;
+	margin-block-end: 0.12em;
 	margin-block-start: 0;
 	color: black;
 	opacity: 1;
 }
 
 .resume-entry, .resume-entry > p{
-	margin-block-end: 0.33em;
+	margin-block-end: 0.16em;
 	margin-block-start: 0em;
 	vertical-align: baseline;
 }
 
 .resume-entry > .resume-entry-detail {
-	text-indent: -1em;
-	padding-left: 2em;
+	text-indent: -.75em;
+	padding-left: 1.5em;
 }
 
 .resume-entry > .resume-entry-detail.resume-smart-linespace:not(:last-child) {
@@ -244,10 +238,10 @@ div.resume-pill-sk > p {
 		display: none;
 	}
 
-	div.do-not-print {
+	div.do-not-print,  article > p {
 		display: none !important;
 	}
-
+	
 	div.contained {
 		padding: 0;
 	}
@@ -272,19 +266,21 @@ div.resume-pill-sk > p {
 	}
 
 	.resume p {
-		font-size: 1.25em !important;
+		font-size: 0.99em !important;
 	}
 
 	.resume-mid-sub-header > .resume-mid-sub-header-text {
-		font-size: 1.875em;
+		font-size: 1.24em;
 		padding: 0.1em;
 	}
 
 	.resume-mid-header > .resume-mid-header-text, .resume-block-title{
-		font-size: 2.5em;
+		font-size: 1.49em;
 	}
 	
 	.resume-header > h1 {
-		font-size: 3.75em;
+		font-size: 2.99em;
+		margin-block-end: 0.15em;
+		margin-block-start: 0.3em;
 	}
 }
