--- a/css/resume-low-ink.css
+++ b/css/resume-low-ink.css
@@ -3,20 +3,7 @@
 	color: black;
 }
 
-.resume .contra-color-text * {
-	color: black;
-}
-
-.resume-pill:hover, .resume-pill-sk:hover,
-.resume-pill:active, .resume-pill-sk:active,
-.resume-pill:focus, .resume-pill-sk:focus {
-	border-color: black;
-	background: white;
-}
-
-.resume-pill:hover p, .resume-pill-sk:hover p,
-.resume-pill:active p, .resume-pill-sk:active p,
-.resume-pill:focus p, .resume-pill-sk:focus p {
+.resume .contra-color-text *:not(.non-contra-color-text) {
 	color: black;
 }
 
@@ -85,5 +72,9 @@
 		font-size: 2.99em;
 		margin-block-end: 0.12em;
 		margin-block-start: 0.24em;
+	}
+
+	.resume *.hidden-text {
+		color: rgba(160,160,160,0.1)
 	}
 }
