--- a/css/resume.css
+++ b/css/resume.css
@@ -1,3 +1,17 @@
+:root {
+	--boldest: 550;
+	--bolder: 500;
+	--bold: 450;
+	--normal: 375;
+	--light: 300;
+
+	--mini: 0.5em;
+	--standard: 1.0em;
+	--sub-sub-header: 1.25em;
+	--sub-header: 1.66em;
+	--header: 2.5em;
+}
+
 html {
 	background: #30353b;
 }
@@ -10,31 +24,52 @@ html {
 	margin: 0;
 }
 
+/* .resume  ::selection {
+	background: rgba(204,255,0,0.45); 
+} 
+.resume  ::-moz-selection {
+	background: rgba(204,255,0,0.45); 
+} */
+
 .resume * {
 	letter-spacing: 0.5px;
+	font-weight: var(--normal);
 }
 
 .resume p {
-	font-size: 1.02em;
+	font-size: var(--standard);
 	color: black;
 	line-height: 1.15;
 	letter-spacing: 0.35px;
 }
 
-.resume .contra-color-text * {
+.resume .contra-color-text *:not(.non-contra-color-text) {
 	color: white;
 }
 
+.resume *.hidden-text {
+	color: transparent;
+}
+
 .fine-print {
-	font-size: 0.66em;
+	font-size: var(--mini) !important;
+	font-weight: var(--light);
+}
+
+.text-align-end {
+	text-align: end;
+}
+
+.resume-pill-inner {
+	border-radius: 25px;
+	margin: 0.125rem !important;
 }
 
 .resume-pill, .resume-pill-sk {
 	border: 2px solid black;
-	border-radius: 50px;
-	margin: 0.125rem !important;
+	border-radius: 25px;
 	background: white;
-	transition-duration: 1s;
+	transition-duration: 0.5s;
 	padding: 0.33rem .66rem;
 }
 
@@ -42,16 +77,27 @@ html {
 .resume-pill:active, .resume-pill-sk:active,
 .resume-pill:focus, .resume-pill-sk:focus {
 	border-color: white;
-	background: black;
+	/* background: black; */
+	background-color: rgba(204,255,0, 0.45);
 }
 
 .resume-pill:hover p, .resume-pill-sk:hover p,
 .resume-pill:active p, .resume-pill-sk:active p,
 .resume-pill:focus p, .resume-pill-sk:focus p {
-	color: white;
+	color: black;
 }
 
-div.content div {
+.resume-pill.active, .resume-pill-sk.active {
+	border-color: black;
+	/* background: black; */
+	background-color: rgba(204,255,0, 0.45);
+}
+
+.resume-pill.active p, .resume-pill-sk.active p {
+	color: black;
+}
+
+div.content * div {
     width: unset !important; 
 	height: unset !important;
 	margin-bottom: 0;
@@ -65,20 +111,24 @@ div.resume-pill > p, div.resume-pill-sk > p{
 	margin-block-end: 0;
 	margin-block-start: 0;
 	text-align: center;
-	font-size: 1em;
-	font-weight: 700;
+	font-size: var(--standard);
+	font-weight: var(--bold);
 }
 
 div.resume-pill-sk > p {
-	font-weight: 500 !important;
+	font-weight: var(--normal) !important;
 }
 
 .resume-left-right-margin {
-	padding: 0 1.75em 0 2em;
+	padding: 0 1.75em 0 1.85em;
 }
 
 .resume-left-right-margin:last-of-type:not(.resume-mid-menu) {
-	padding: 0 1.75em 0.5em 2em;
+	padding: 0 1.75em 0.5em 1.85em;
+}
+
+.resume-left-right-margin:last-of-type:not(.resume-mid-menu).resume-top-bottom  {
+	padding: 0.25em 1.75em 0.25em 1.85em;
 }
 
 .resume-top-bottom {
@@ -91,7 +141,7 @@ div.resume-pill-sk > p {
 }
 
 .resume-place, .resume-achievement {
-	font-weight: bolder;
+	font-weight: var(--boldest);
 }
 
 .resume-time {
@@ -101,15 +151,26 @@ div.resume-pill-sk > p {
 .resume-page {
 	display: flex;
 	flex-direction: column;
+	/* border-radius: 50px; */
 }
+
+/* .resume-page > div:first-of-type {
+	border-top-right-radius: 50px;
+    border-top-left-radius: 50px;
+}
+
+.resume > div:last-of-type {
+	border-bottom-right-radius: 50px;
+    border-bottom-left-radius: 50px;
+} */
 
 .resume-header {
 	text-align: left;
 }
 
 .resume-header > h1 {
-	font-size: 3em;
-	font-weight: 900;
+	font-size: var(--header);
+	font-weight: var(--bolder);
 	margin-block-end: 0.4em;
 	margin-block-start: 0.4em;
 	opacity: 1;
@@ -121,16 +182,16 @@ div.resume-pill-sk > p {
 }
 
 .resume-mid-header > .resume-mid-header-text {
-	font-size: 2em;
-	font-weight: 700;
+	font-size: var(--sub-header);
+	font-weight: var(--bold);
 	margin-block-end: 0.12em;
 	margin-block-start: 0.04em;
 	opacity: 1;
 }
 
 .resume-mid-header > .resume-mid-header-basic-text, .resume-mid-header > .resume-mid-header-basic-text > a {
-	font-size: 1.0em;
-	font-weight: 500;
+	font-size: var(--standard);
+	font-weight: var(--normal);
 	margin-block-end: 0em;
 	margin-block-start: 0em;
 	opacity: 1;
@@ -139,16 +200,16 @@ div.resume-pill-sk > p {
 .resume-mid-header > .resume-mid-header-basic-text > a:hover,
 .resume-mid-header > .resume-mid-header-basic-text > a:active,
 .resume-mid-header > .resume-mid-header-basic-text > a:focus {
-	font-size: 1.0em;
-	font-weight: 900;
+	font-size: var(--standard);
+	font-weight: var(--bolder);
 	text-decoration: none;
 	color: black;
 	background-color: white;
 }
 
 .resume-mid-sub-header > .resume-mid-sub-header-text {
-	font-size: 1em;
-	font-weight: 500;
+	font-size: var(--sub-sub-header);
+	font-weight: var(--normal);
 	margin-block-end: 0em;
 	margin-block-start: 0em;
 	opacity: 1;
@@ -166,8 +227,8 @@ div.resume-pill-sk > p {
 }
 
 .resume-block-title{
-	font-size: 2em;
-	font-weight: 700;
+	font-size: var(--sub-header);
+	font-weight: var(--bold);
 	margin-block-end: 0.12em;
 	margin-block-start: 0;
 	color: black;
@@ -188,6 +249,11 @@ div.resume-pill-sk > p {
 .resume-entry > .resume-entry-detail.resume-smart-linespace:not(:last-child) {
 	margin-block-end: 0em;
 	margin-block-start: 0em;
+}
+
+.resume-flex-align-end {
+	display: flex;
+    align-items: flex-end;
 }
 
 .do-not-show {
@@ -226,17 +292,49 @@ div.resume-pill-sk > p {
 	}
 }
 
+/* @media print and ( max-height: 3100px ) {
+	html {
+		--printer-scale-down: 0.91;
+	}
+}
+
+@media print and ( min-height: 3100px ) and ( max-height: 3220px ) {
+	html {
+		--printer-scale-down: 0.97;
+	}
+}
+
+@media print and ( min-height: 3220px ) {
+	html {
+		--printer-scale-down: 1.25;
+	}
+} */
+
+/* @media print and ( max-width: 6.0in ) {
+	html {
+		--printer-width-adjustment: 30px;
+	}
+}
+
+@media print and ( min-width: 6.0in ) and ( max-width: 8.3in ) {
+	html {
+		--printer-width-adjustment: 15px;
+	}
+}
+
+@media print and ( min-width: 8.3in ) {
+	html {
+		--printer-width-adjustment: 0px;
+	}
+} */
+
+
 @media print {
 	@page {
 		size: auto;
 		margin: 0mm;
 	}
 
-	.wrap {
-		margin: 0 auto;
-		width: unset !important;
-		max-width: unset !important;
-	}
 
 	nav, header {
 		display: none;
@@ -244,6 +342,35 @@ div.resume-pill-sk > p {
 
 	div.do-not-print,  article > p {
 		display: none !important;
+	}
+
+	html {
+		overflow: hidden;
+		font-family: "Inter", sans-serif;
+		background-color:#30353b;
+		--printer-width-adjustment: 0px;
+		--printer-scale-down: 0.935;
+	}
+
+	body {
+		margin: 0px;
+		min-height: 100vh;
+		/* height: ; */
+	}
+
+	div {
+		overflow: visible;
+	}
+
+	.wrap {
+		margin: 0 auto;
+		width: unset !important;
+		max-width: unset !important;
+		min-height: 100vh;
+	}
+
+	article.flex-container, div.content.allcenterer {
+		min-height: 100vh;
 	}
 	
 	div.contained {
@@ -253,38 +380,61 @@ div.resume-pill-sk > p {
 	div.resume-page{
 		min-width: 100% !important;
 		max-width: none !important;
-	}
-
-	html {
-		overflow: visible;
-		font-family: 'Didact Gothic', sans-serif;
-		background-color:#30353b
-	}
-
-	body {
-		margin: 0px;
-	}
-
-	div {
-		overflow: visible
+		min-height: 100vh;
+		justify-content: center;
 	}
 
 	.resume p {
-		font-size: 0.99em !important;
+		/* font-size: 0.99em; */
+		font-size: calc(var(--printer-scale-down) * var(--standard)) !important;
+		/* font-size: max(min(calc(0.99vh + 0.79vw), 0.99em), 0.79em)!important; */
+	}
+
+	.resume > div > div {
+		page-break-inside: avoid;
+	}
+
+	.resume *.hidden-text {
+		color: rgba(240,240,240,0.1)
+	}
+
+	.resume p.fine-print, .fine-print {
+		font-size: calc(var(--printer-scale-down) * var(--mini)) !important;
 	}
 
 	.resume-mid-sub-header > .resume-mid-sub-header-text {
-		font-size: 1.24em;
+		/* font-size: 1.24em; */
+		/* font-size: max(min(calc(1.24vh + 0.99vw), 1.24em), 0.99em); */
+		font-size: calc(var(--printer-scale-down) * var(--sub-sub-header));
 		padding: 0.1em;
 	}
 
 	.resume-mid-header > .resume-mid-header-text, .resume-block-title{
-		font-size: 1.49em;
+		font-size: calc(var(--printer-scale-down) * var(--sub-header));
+		/* font-size: 1.49em; */
+		/* font-size: max(min(calc(1.34vh + 1.04vw), 1.34em), 1.04em); */
 	}
 	
 	.resume-header > h1 {
-		font-size: 2.99em;
+		font-size: calc(var(--printer-scale-down) * var(--header));
+		/* font-size: 2.99em; */
+		/* font-size: max(min(calc(2.39vh + 2.09vw), 2.39em), 2.09em); */
 		margin-block-end: 0.15em;
+		/* margin-block-end: max(min(calc(0.135vh + 0.104vw), 0.134em), 0.104em); */
 		margin-block-start: 0.3em;
+		/* margin-block-start: max(min(calc(0.24vh + 0.24vw), 0.27em), 0.21em); */
 	}
+	
+	.resume-left-right-margin {
+		/* padding-right: calc(2.25em - var(--printer-width-adjustment));
+		padding-left: calc(2.5em - var(--printer-width-adjustment)); */
+		padding-right: calc(2.25em * var(--printer-scale-down) * var(--printer-scale-down) * var(--printer-scale-down)) !important;
+		padding-left: calc(2.5em * var(--printer-scale-down) * var(--printer-scale-down) * var(--printer-scale-down)) !important;
+		/* 0 1.75em 0 1.85em; */
+	}
+
+	.resume-print-flex-grow {
+		flex-grow: 1;
+	}
+
 }
