more css changes

--- a/css/hi.css
+++ b/css/hi.css
@@ -1,4 +1,5 @@
-#info-div, #loader-animation {
+#info-div,
+#loader-animation {
 	visibility: hidden;
 }
 
@@ -9,18 +10,19 @@ a.project {
 	padding-right: 0.5em;
 	margin-block-start: 0.5em;
 	font-size: 1.25rem;
-    line-height: 2;
+	line-height: 2;
 }
 
-a.project:hover, a.project:active, a.project:focus {
+a.project:hover,
+a.project:active,
+a.project:focus {
 	background: white;
 	color: #30353b;
-	font-weight: 900;
 }
 
 #preload.containedFlex {
 	flex-direction: column;
-  	align-items: center;
+	align-items: center;
 }
 
 .column-flex {
@@ -28,68 +30,79 @@ a.project:hover, a.project:active, a.project:focus {
 }
 
 .sync-pending {
-		position: relative;
-		width: 30vw;
-		height: 30vw;
-	  }
-	  .sync-pending div {
-		width: 9vw;
-		height: 9vw;
-		border-radius: 50%;
-		margin-bottom: -9vw;
-	  }
-	  .sync-pending div:nth-child(1) {
-		animation: sync-pending1 222ms infinite;
-	  }
-	  .sync-pending div:nth-child(2) {
-		animation: sync-pending2 222ms infinite;
-	  }
-	  .sync-pending div:nth-child(3) {
-		animation: sync-pending3 222ms infinite;
-	  }
-	  .sync-pending div:nth-child(4) {
-		animation: sync-pending4 222ms infinite;
-	  }
+	position: relative;
+	width: 30vw;
+	height: 30vw;
+}
 
-	  @keyframes sync-pending1 {
-		0% {
-			transform: translate(10vw, 0vw);
-			background: #ccc;
-		  }
-		  100% {
-			transform: translate(20vw, 10vw);
-			background: #666;
-		}
-	  }
-	  @keyframes sync-pending2 {
-		0% {
-		  transform: translate(20vw, 10vw);
-		  background: #666;
-		}
-		100% {
-		  transform: translate(10vw, 20vw);
-		  background: #000;
-		}
+.sync-pending div {
+	width: 9vw;
+	height: 9vw;
+	border-radius: 50%;
+	margin-bottom: -9vw;
+}
 
-	  }
-	  @keyframes sync-pending3 {
-		0% {
-		  transform: translate(10vw, 20vw);
-		  background: #000;
-		}
-		100% {
-		  transform: translate(0vw, 10vw);
-		  background: #666;
-		}
-	  }
-	  @keyframes sync-pending4 {
-		0% {
-		  transform: translate(0vw, 10vw);
-		  background: #666;
-		}
-		100% {
-		  transform: translate(10vw, 0vw);
-		  background: #ccc;
-		}
-	  }
-  }
+.sync-pending div:nth-child(1) {
+	animation: sync-pending1 222ms infinite;
+}
+
+.sync-pending div:nth-child(2) {
+	animation: sync-pending2 222ms infinite;
+}
+
+.sync-pending div:nth-child(3) {
+	animation: sync-pending3 222ms infinite;
+}
+
+.sync-pending div:nth-child(4) {
+	animation: sync-pending4 222ms infinite;
+}
+
+@keyframes sync-pending1 {
+	0% {
+		transform: translate(10vw, 0vw);
+		background: #ccc;
+	}
+
+	100% {
+		transform: translate(20vw, 10vw);
+		background: #666;
+	}
+}
+
+@keyframes sync-pending2 {
+	0% {
+		transform: translate(20vw, 10vw);
+		background: #666;
+	}
+
+	100% {
+		transform: translate(10vw, 20vw);
+		background: #000;
+	}
+
+}
+
+@keyframes sync-pending3 {
+	0% {
+		transform: translate(10vw, 20vw);
+		background: #000;
+	}
+
+	100% {
+		transform: translate(0vw, 10vw);
+		background: #666;
+	}
+}
+
+@keyframes sync-pending4 {
+	0% {
+		transform: translate(0vw, 10vw);
+		background: #666;
+	}
+
+	100% {
+		transform: translate(10vw, 0vw);
+		background: #ccc;
+	}
+}
