--- a/css/resume-light.css
+++ b/css/resume-light.css
@@ -39,9 +39,9 @@
 	/* background-color: white; */
 }
 
-.resume-page > div:nth-last-of-type(1) {
+/* .resume-page > div:nth-last-of-type(1) {
 	flex-grow: 1;
-}
+} */
 
 .resume-block-title{
 	color: black;
